--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: #d9dcd6;
 }
-
+/*apply styles to header starts */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -31,7 +31,6 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
 .header div ul {
     list-style-type: none;
 }
@@ -40,7 +39,7 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
-
+/*apply styles to <header> ends */
 a {
     color: #ffffff;
     text-decoration: none;
@@ -49,7 +48,7 @@ a {
 p {
     font-size: 16px;
 }
-
+/*Hero Style Start */
 .hero {
     height: 800px;
     width: 100%;
@@ -58,7 +57,7 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/*Hero Style ends */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -133,7 +132,7 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/*search engine Style Start */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
