--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-/* condsolidated to benefit
+/* condsolidated to benefit /*
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
@@ -107,11 +107,12 @@ p {
     color: #ffffff;
 }
 */
+/*h3 style starts */
 .benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/*h3 style ends */
 .benefit img {
     display: block;
     margin: 10px auto;
@@ -144,7 +145,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/*img style start here */
 .search-engine-optimization img {
     max-height: 200px;
 }
@@ -161,7 +162,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/*img style ends here */
 .online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -171,7 +172,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/*Footer style Starts */
 .footer {
     padding: 30px;
     clear: both;
@@ -182,3 +183,4 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+/*footer style Ends */
